Added zod schema for generic types